--- a/task1/index.html
+++ b/task1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DroneX - Leading the Future of Aerial Technology</title>
-    <link rel="stylesheet" href="task1.css">
+    <link rel="stylesheet" href="task1/task1.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -21,7 +21,7 @@
     </header>
     <section id="home" class="hero">
         <video autoplay muted loop id="bg-video">
-            <source src="videos/drone.mp4" type="video/mp4">
+            <source src="task1/videos/drone.mp4" type="video/mp4">
         </video>
         <div class="hero-content">
             <h1>Welcome to DroneX</h1>
@@ -32,7 +32,7 @@
     <section id="about">
         <h2>About DroneX</h2>
         <p>DroneX is at the forefront of drone technology, providing innovative solutions for both recreational and professional use.</p>
-        <img src="images/drone1.jpg" alt="Drone Image">
+        <img src="task1/images/drone1.jpg" alt="Drone Image">
     </section>
     <section id="features">
         <h2>Features</h2>
@@ -42,7 +42,7 @@
             <li>Advanced GPS technology</li>
             <li>User-friendly controls</li>
         </ul>
-        <img src="images/drone2.jpg" alt="Drone Features">
+        <img src="task1/images/drone2.jpg" alt="Drone Features">
     </section>
     <section id="contact">
         <h2>Contact Us</h2>
@@ -59,6 +59,6 @@
     <footer>
         <p>&copy; 2024 DroneX. All rights reserved.</p>
     </footer>
-    <script src="task1.js"></script>
+    <script src="task1/task1.js"></script>
 </body>
 </html>
