--- a/task1/index.html
+++ b/task1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DroneX - Leading the Future of Aerial Technolog</title>
+    <title>DroneX - Leading the Future of Aerial Technology</title>
     <link rel="stylesheet" href="task1.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -25,7 +25,7 @@
         </video>
         <div class="hero-content">
             <h1>Welcome to DroneX</h1>
-            <p>Leading the Future of Aerial Technology</p>
+            <p>Leading the Future of Aerial Technology.</p>
             <a href="#features" class="cta-button">Discover Our Drones</a>
         </div>
     </section>
